# Agent-Control-Plane

./: .env.example  ARCHITECTURE.md  COMPLETE_IMPLEMENTATION.md  EXTENSION_LOADING_GUIDE.md  FINAL_SUMMARY.md  HOW_TO_USE_EXTENSION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART_CONTROLLER.md  README.md  README_COMPLETE.md  README_CONTROLLER.md  REPLAY_CONTROLLER.md  START_HERE.md  VSCODE_EXTENSION_INTEGRATION.md  YES_EXTENSION_COMPLETE.md  cli.md  docker-compose.yaml  extension.md  open-extension.ps1  package-lock.json  package.json  pnpm-lock.yaml
ACP-sdk/: pyproject.toml
ACP-sdk/src/acp/core/: types.py
src/agent/: llm-provider.ts  replay.ts  run.ts  tools.ts
src/cli/: analyze.ts  replay-control.ts
src/core/: agent-runtime.ts  analyzer.ts  index.ts  replay-controller.ts  step-inspector.ts  trace-recorder.ts  types.ts
src/core/vector-store/: bg-worker.ts  init-queue.ts
src/demo/: replay-controller-demo.ts
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
